package com.uml.q01;

public class Cat extends Animal {

    public Cat(String name) {
        super(name);
    }
}
