package com.uml.q01;

public class Dog extends Animal {

    public Dog(String name) {
        super(name);
    }
}

