@startuml

title __Q01's Class Diagram__\n

  namespace com.uml.q01 {
    class com.uml.q01.Animal {
        - name : String
        + Animal()
        + Animal()
    }
  }
  

  namespace com.uml.q01 {
    class com.uml.q01.Cat {
        + Cat()
    }
  }
  

  namespace com.uml.q01 {
    class com.uml.q01.Dog {
        + Dog()
    }
  }
  

  com.uml.q01.Cat -up-|> com.uml.q01.Animal
  com.uml.q01.Dog -up-|> com.uml.q01.Animal


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
